implementacao do usuarioSessions salvando no banco as informacoes de device (BROWSER)